# giga-chat

./: Cargo.toml  readme.md
crates/gigachat-models/: Cargo.toml
crates/gigachat-models/src/: lib.rs  settings.rs
crates/yew-ui/: .gitignore  Cargo.toml  Trunk.toml  index.html
crates/yew-ui/assets/: main.css
crates/yew-ui/src/: app.rs  main.rs  route.rs
crates/yew-ui/src/components/layout/: drag_overlay.rs  mod.rs
crates/yew-ui/src/pages/: mod.rs
crates/yew-ui/src/pages/chat/: mod.rs  twitch_chat_message.rs  twitch_messages_list.rs
crates/yew-ui/src/pages/settings/: mod.rs  save_settings_args.rs  settings_form.rs
crates/yew-ui/src/pages/settings/form_controls/: mod.rs  settings_input_control.rs  settings_text_input_control.rs
crates/yew-ui/src/utils/: colors.rs
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: app_ready.rs  mod.rs  save_settings.rs
src-tauri/src/emote_providers/: better_ttv_emote_provider.rs  ffz_emote_provider.rs  mod.rs  seven_tv_emote_provider.rs
src-tauri/src/services/: emotes_service.rs  mod.rs  settings_service.rs
src-tauri/src/state/: app_settings_state.rs  current_channel_state.rs  mod.rs  saved_emotes_state.rs  ui_lock_state.rs
src-tauri/src/utils/: mod.rs
