[package]
name = "gigachat-models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.23", features = ["serde"] }
bounce = "0.6.0"
gloo-storage = "0.2.2"
